--- a/python/ch02.ipynb
+++ b/python/ch02.ipynb
@@ -132,15 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2681163938.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[35], line 9\u001b[1;36m\u001b[0m\n\u001b[1;33m    switch op\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "연산식을 입력하시오.\n",
+      "5 * 5\n",
+      "5 * 5의 결과는 25\n"
      ]
     }
    ],
@@ -151,7 +152,23 @@
     "op1 = int(input())\n",
     "op = str(input())\n",
     "op2 = int(input())\n",
-    "print(op1, op, op2)"
+    "print(op1, op, op2)\n",
+    "\n",
+    "# Python에는 switch문이 없으므로 if - elif 문으로 대체\n",
+    "if (op == \"+\"):\n",
+    "    op = \"+\"\n",
+    "    result = op1 + op2\n",
+    "elif (op == \"-\"):\n",
+    "    op = \"-\"\n",
+    "    result = op1 - op2\n",
+    "elif (op == \"*\"):\n",
+    "    op = \"*\"\n",
+    "    result = op1 * op2\n",
+    "else:\n",
+    "    op = \"/\"\n",
+    "    result = op1 / op2\n",
+    "\n",
+    "print(f\"%d %s %d의 결과는 %d\" % (op1, op, op2, result))"
    ]
   },
   {
@@ -191,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,6 +216,7 @@
      "output_type": "stream",
      "text": [
       "건너뛸 숫자를 입력하시오. (1~10 사이)\n",
+      "선택된 숫자 :  5\n",
       "1\n",
       "2\n",
       "3\n",
@@ -216,6 +234,7 @@
     "\n",
     "print(\"건너뛸 숫자를 입력하시오. (1~10 사이)\")\n",
     "num = int(input())\n",
+    "print(\"선택된 숫자 : \", num)\n",
     "\n",
     "for i in range(1, 11):\n",
     "    if num == i:\n",
@@ -226,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -239,8 +258,6 @@
       "입력한 숫자 : 3\n",
       "숫자를 입력하시오.\n",
       "입력한 숫자 : 5\n",
-      "숫자를 입력하시오.\n",
-      "입력한 숫자 : 7\n",
       "숫자를 입력하시오.\n",
       "입력한 숫자 : 10\n",
       "프로그램을 종료합니다.\n"
